--- a/src/RegistrationManager/Views/Index/API.cshtml
+++ b/src/RegistrationManager/Views/Index/API.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<h1>This is a discription about the RegistationManger API.</h1>
+<h1>Registation manager REST API Discription.</h1>
 
 @{ 
 #if DEBUG
@@ -16,7 +16,9 @@
 }
 
 <!--https://github.com/domaindrivendev/Ahoy-->
+<!--https://github.com/domaindrivendev/Swashbuckle/blob/master/README.md-->
 
-<a href=@swaggerUi target="_blank">Swagger API Description</a> </br>
+<a href=@swaggerUi target="_blank">Swagger API Description</a> 
+<br/>
 <a href=@swaggerJson target="_blank">Swagger API Json</a>
 
